# tt-bench

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
artifact/: plot_tensix.py
src/: alignment_benchmark.cpp  data_size_benchmark.cpp  memory_access_benchmark.cpp  mixed_precision_benchmark.cpp  sparse_data_benchmark.cpp  tensix_benchmark.cpp
